# mclaren

./: CMakeLists.txt  README.md  package.xml
description/: gazebo_control.xacro  mclaren_p1.urdf  mclaren_robot.rviz  robot.urdf.xacro  shitty_bot.xacro
launch/: mclaren_p1_launch.py  mclaren_p1_rsp_launch.py  robot_rviz.launch.py
src/: wall_checker.cpp
world/: hennesey_world.world
